[gd_scene format=3 uid="uid://mainmenu001"]

[ext_resource type="Script" path="res://scripts/ui/MainMenu.gd" id="1_script"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.12, 0.15, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 180.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 48
text = "NOMAD"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -60.0
offset_right = 100.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="BtnNewGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="BtnLoadGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Load Game"

[node name="BtnQuit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="PopupNewGame" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PopupNewGame"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="LabelTitle" type="Label" parent="PopupNewGame/VBoxContainer"]
layout_mode = 2
text = "Create New World"
horizontal_alignment = 1

[node name="LabelName" type="Label" parent="PopupNewGame/VBoxContainer"]
layout_mode = 2
text = "World Name:"

[node name="LineEditName" type="LineEdit" parent="PopupNewGame/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter world name"

[node name="LabelSeed" type="Label" parent="PopupNewGame/VBoxContainer"]
layout_mode = 2
text = "Seed (optional):"

[node name="LineEditSeed" type="LineEdit" parent="PopupNewGame/VBoxContainer"]
layout_mode = 2
placeholder_text = "Leave empty for random"

[node name="BtnStartCreate" type="Button" parent="PopupNewGame/VBoxContainer"]
layout_mode = 2
text = "Create"

[node name="BtnCancelNew" type="Button" parent="PopupNewGame/VBoxContainer"]
layout_mode = 2
text = "Cancel"

[node name="PopupLoadGame" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -150.0
offset_right = 180.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PopupLoadGame"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="LabelTitle" type="Label" parent="PopupLoadGame/VBoxContainer"]
layout_mode = 2
text = "Load World"
horizontal_alignment = 1

[node name="WorldList" type="ItemList" parent="PopupLoadGame/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PopupLoadGame/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="BtnStartLoad" type="Button" parent="PopupLoadGame/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Load"

[node name="BtnDeleteWorld" type="Button" parent="PopupLoadGame/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Delete"

[node name="BtnCancelLoad" type="Button" parent="PopupLoadGame/VBoxContainer"]
layout_mode = 2
text = "Cancel"
